<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_activity_id">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <!--username-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/label_acount"
                android:textColor="@color/label_color"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/tv_timestamp"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/label_timestamp"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_value_website"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:hint="@string/hint_website"
            android:inputType="textCapSentences"
            android:textColor="@color/value_color"  />

        <!--username-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_username"
                android:textColor="@color/label_color"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/et_value_username"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/hint_username"
                android:inputType="text"
                android:textColor="@color/value_color"
                tools:text="@string/label_username" />
        </LinearLayout>

        <!--email-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_email"
                android:textColor="@color/label_color"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/et_value_email"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/hint_email"
                android:inputType="text"
                android:textColor="@color/value_color" />
        </LinearLayout>

        <!--password-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_password"
                android:textColor="@color/label_color"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/et_value_password"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/hint_password"
                android:inputType="text"
                android:textColor="@color/value_color"
                tools:text="@string/label_password" />
        </LinearLayout>


        <!--security levels-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="4dp"
            android:text="@string/label_security"
            android:textColor="@color/label_color"
            android:textSize="@dimen/text_size" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <!-- Linear layout that contains all three priority buttons (high, medium, low)
            in a single line -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/buttonP1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/materialRed"
                    android:text="@string/high_security"
                    android:textColor="@android:color/primary_text_light" />

                <Button
                    android:id="@+id/buttonP2"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/materialOrange"
                    android:text="@string/med_security"
                    android:textColor="@android:color/primary_text_light" />

                <Button
                    android:id="@+id/buttonP3"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/materialYellow"
                    android:text="@string/low_security"
                    android:textColor="@android:color/primary_text_light" />
            </LinearLayout>

            <!-- RadioGroup for visible selection of a priority -->
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">

                <RadioButton
                    android:id="@+id/radButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:theme="@style/WhiteRadioButton" />

                <RadioButton
                    android:id="@+id/radButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:theme="@style/WhiteRadioButton" />

                <RadioButton
                    android:id="@+id/radButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:theme="@style/WhiteRadioButton" />
            </RadioGroup>
        </FrameLayout>

        <TextView
            android:id="@+id/tv_label_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/label_description"
            android:textColor="@color/label_color"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/et_value_description"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="120sp"
            android:background="@color/grey"
            android:gravity="top|left"
            android:hint="@string/hint_description"
            android:inputType="textCapSentences"
            android:textColor="@color/value_color"
            tools:text="@string/label_description" />

    </LinearLayout>

</ScrollView>
